--- a/.github/workflows/python-package-unittests.yml
+++ b/.github/workflows/python-package-unittests.yml
@@ -17,11 +17,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install dependencies Load Service Tests
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest
+        pipenv sync --dev
     - name: Run tests
       run: |
-        pytest
+        pipenv run coverage run --source=. -m pytest
+        pipenv run coverage report -m --omit="*/tests/*"
