--- a/.github/workflows/python-package-unittests.yml
+++ b/.github/workflows/python-package-unittests.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10]
+        python-version: ["3.7","3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -17,8 +17,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies Load Service Tests
+    - name: Install dependencies
       run: |
+        python -m pip install pipenv==2023.12.0 wheel>=0.40.0
         pipenv sync --dev
     - name: Run tests
       run: |
