--- a/.github/workflows/python-package-unittests.yml
+++ b/.github/workflows/python-package-unittests.yml
@@ -17,10 +17,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install pipenv
+      run: |
+        python -m pip install pipenv
     - name: Install dependencies
       run: |
-        python -m pip install pipenv==2023.12.0 wheel>=0.40.0
-        pipenv sync --dev
+        pipenv install --dev
     - name: Run tests
       run: |
         pipenv run coverage run --source=. -m pytest
