--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,6 @@ httpx = "*"
 fastapi = "*"
 boto3 = "*"
 requests = "*"
-pyjwt = "*"
 
 [requires]
-python_version = ">=3.8"
+python_version = ">=3.8, <=3.11"
