--- a/.github/workflows/python-package-unittests.yml
+++ b/.github/workflows/python-package-unittests.yml
@@ -4,7 +4,6 @@ on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -12,11 +11,12 @@ jobs:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      id: cp310
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.8.0 - 3.11.0"
+    - run: echo '${{ steps.cp310.outputs.python-version }}'
     - name: Install pipenv
       run: |
         python -m pip install pipenv
