--- a/.github/workflows/python-package-unittests.yml
+++ b/.github/workflows/python-package-unittests.yml
@@ -18,6 +18,11 @@ jobs:
         python-version: "3.8.0 - 3.11.0"
     - run: echo '${{ steps.cp310.outputs.python-version }}'
 
+    # Set AWS region environment variable
+    # as a simple way to manage moto
+    - name: Set AWS region
+      run: echo "export AWS_DEFAULT_REGION=eu-north-1" >> $GITHUB_ENV
+
     - name: Install dependencies
       run: |
         pip install fastapi
