--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,7 @@ Documentation = "https://github.com/grasp-labs/ds-fastapi-middleware"
 Repository = "https://github.com/grasp-labs/ds-fastapi-middleware"
 Issues = "https://github.com/grasp-labs/ds-fastapi-middleware/issues"
 Changelog = "https://github.com/grasp-labs/ds-fastapi-middleware/blob/main/CHANGELOG.md"
+
+[tool.sphinx-autobuild]
+source-dir = "docs"
+build-dir = "_build"
