--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=64"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "ds_fastapi_middleware"
-version = "2024.4.2"
+version = "2024.4.4"
 description = "A Python package for FastAPI middleware. Pacakge is part of the greater GraspDP / DPW project."
 dependencies = [
     "boto3",
@@ -13,10 +13,13 @@ dependencies = [
 ]
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
+readme = "PyPI.md"
 keywords = ["grasp-labs", "python", "fastApi", "middleware", "aws"]
 classifiers = [
   "Development Status :: 4 - Beta",
-  "Programming Language :: Python"
+  "Programming Language :: Python",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
 ]
 authors = [
     {name = "yuan1989", email = "yuan@grasplabs.no"},
