--- a/.github/workflows/publish_test.yml
+++ b/.github/workflows/publish_test.yml
@@ -7,11 +7,9 @@
 # To get a newer version, you will need to update the SHA.
 # You can also reference a tag or branch, but the action may change without warning.
 
-name: Deploy to PyPI
+name: Deploy to TestPyPI
 
 on:
-  release:
-    types: [published]
   workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
 
 jobs:
@@ -38,8 +36,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: pypi
-      url: https://pypi.org/p/ds-fastapi-middleware
+      name: testpypi
+      url: https://test.pypi.org/p/ds-fastapi-middleware
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
@@ -49,3 +47,5 @@ jobs:
           path: dist/
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
