--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
 name: Run tests
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -22,22 +22,23 @@ jobs:
 
     # Set AWS region environment variable
     # as a simple way to manage moto
-    - name: Set AWS region
-      run: echo "export AWS_DEFAULT_REGION=eu-north-1" >> $GITHUB_ENV
+    # - name: Set AWS region
+    #   run: echo "export AWS_DEFAULT_REGION=eu-north-1" >> $GITHUB_ENV
 
     - name: Install dependencies
       run: |
-        pip install fastapi
-        pip install boto3
-        pip install requests
-        pip install coverage
-        pip install pytest
-        pip install pytest-asyncio
-        pip install moto
-        pip install httpx
+          pip install pipenv
+          pipenv requirements --dev > requirements.txt
+          pip install -r requirements.txt
     - name: Run tests
       env:
         PYTHONPATH: "src/"
       run: |
         coverage run --source=. -m pytest
         coverage report -m --omit="*/tests/*"
+
+    - name: Upload combined coverage report to Codecov
+      uses: codecov/codecov-action@v4.0.1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        flags: unittests,py${{ matrix.python-version }}
