--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=64"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ds_fastapi_middleware"
+name = "ds_fastapi"
 dynamic = ["version"]
-description = "A Python package for FastAPI middleware. Pacakge is part of the greater GraspDP / DPW project."
+description = "A Python package for FastAPI. Pacakge is part of the greater GraspDP / DPW project."
 dependencies = [
     "boto3",
     "fastapi",
@@ -14,7 +14,7 @@ dependencies = [
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
 readme = "PyPI.md"
-keywords = ["grasp-labs", "python", "fastApi", "middleware", "aws"]
+keywords = ["grasp-labs", "python", "fastApi", "middleware", "aws", "authentication"]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
@@ -29,16 +29,11 @@ maintainers = [
     {name = "skerve", email = "arve.skjervheim@gmail.com"},
 ]
 [project.urls]
-Homepage = "https://github.com/grasp-labs/ds-fastapi-middleware"
-Documentation = "https://github.com/grasp-labs/ds-fastapi-middleware"
-Repository = "https://github.com/grasp-labs/ds-fastapi-middleware"
-Issues = "https://github.com/grasp-labs/ds-fastapi-middleware/issues"
-Changelog = "https://github.com/grasp-labs/ds-fastapi-middleware/blob/main/CHANGELOG.md"
+Homepage = "https://github.com/grasp-labs/ds-fastapi"
+Documentation = "https://github.com/grasp-labs/ds-fastapi"
+Repository = "https://github.com/grasp-labs/ds-fastapi"
+Issues = "https://github.com/grasp-labs/ds-fastapie/issues"
+Changelog = "https://github.com/grasp-labs/ds-fastapi/blob/main/CHANGELOG.md"
 
 [tool.setuptools.dynamic]
 version = {file = "VERSION.txt"}
-
-[tool.sphinx-autobuild]
-source-dir = "docs"
-build-dir = "_build"
-documentation-url = "https://github.com/grasp-labs/ds-fastapi-middleware"
