--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,8 @@ jobs:
 
     # Set AWS region environment variable
     # as a simple way to manage moto
-    # - name: Set AWS region
-    #   run: echo "export AWS_DEFAULT_REGION=eu-north-1" >> $GITHUB_ENV
+    - name: Set AWS region
+      run: echo "export AWS_DEFAULT_REGION=eu-north-1" >> $GITHUB_ENV
 
     - name: Install dependencies
       run: |
