--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "boto3",
     "fastapi",
     "requests",
+    "pyjwt",
+    "cryptography"
 ]
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
