--- a/.github/workflows/publish_test.yml
+++ b/.github/workflows/publish_test.yml
@@ -37,7 +37,7 @@ jobs:
     needs: build
     environment:
       name: testpypi
-      url: https://test.pypi.org/p/ds-fastapi-middleware
+      url: https://test.pypi.org/p/ds-fastapi
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
